--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
     <title>App Todo</title>
 </head>
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">Todo List</a>
+        </nav>
+    </header>
     <div id="app">
-        <ul></ul>
-        <input type="text" placeholder="Digite um todo">
-        <button>Adicionar</button>
-
-        <script src="todos.js"></script>
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="Adicionar tarefa">
+            <div class="input-group-prepend">
+                <button class="btn btn-outline-primary" type="button">Adicionar</button>
+            </div>
+        </div>
+        <ul class="list-group"></ul>
     </div>
+    <script src="todos.js"></script>
 </body>
 </html>
